feat: update core modules and add comprehensive test suite
Update JAIDoc, ChunkWriter, DocTreeJson, and JdkSourceDownloader with
bug fixes and enhancements. Add unit tests for DocTreeJson (normalize,
decodeEntity), ChunkWriter (split, bestBreak), and JdkSourceDownloader
(normalizeVersion). Add integration test for JAIDoc startup configuration.