@@ -10,6 +10,7 @@ import tools.jackson.databind.node.ObjectNode;
 
 import java.io.IOException;
 import java.nio.file.Path;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -19,23 +20,32 @@ class ChunkWriterTest extends UnitTest {
     @TempDir
     Path tempDir;
 
-    /**
+   /**
      * ChunkWriter constructor enforces maxChars >= 500.
      * Use values > 500 to test splitting behavior.
      */
-    private ChunkWriter createChunkWriter(int maxChars, int overlap, boolean onlyDocumented) throws IOException {
+    private ChunkWriter createChunkWriter(int maxChars) throws IOException {
         Path file = tempDir.resolve("chunks.jsonl");
-        return new ChunkWriter(file, jsonMapper, maxChars, overlap, onlyDocumented);
+        return new ChunkWriter(file, jsonMapper, maxChars, 10, false);
+    }
+
+    /**
+     * ChunkWriter constructor for testing the documented-only mode.
+     */
+    private ChunkWriter createDocumentedOnlyChunkWriter(int maxChars) throws IOException {
+        Path file = tempDir.resolve("chunks.jsonl");
+        return new ChunkWriter(file, jsonMapper, maxChars, 10, true);
     }
 
     @Test
     @Order(1)
     void split_shortText_noSplit() throws IOException {
-        ChunkWriter writer = createChunkWriter(600, 10, false);
-        String text = "This is a short text that fits within the limit";
-        var parts = writer.split(text);
-        assertThat(parts).hasSize(1);
-        assertThat(parts.get(0)).isEqualTo(text);
+        try (ChunkWriter writer = createChunkWriter(600)) {
+            String text = "This is a short text that fits within the limit";
+            List<String> parts = writer.split(text);
+            assertThat(parts).hasSize(1);
+            assertThat(parts.getFirst()).isEqualTo(text);
+        }
     }
 
     @Test
@@ -45,10 +55,11 @@ class ChunkWriterTest extends UnitTest {
         String paragraph = "This is a paragraph with many words and information for testing the text splitting logic. ";
         String text = paragraph.repeat(10) + "\n\n" + paragraph.repeat(10);
         assertThat(text.length()).as("Text should be over 800 chars").isGreaterThan(800);
-        ChunkWriter writer = createChunkWriter(800, 10, false);
-        var parts = writer.split(text);
-        assertThat(parts).hasSizeGreaterThan(1);
-        assertThat(parts.get(0)).contains("This is a paragraph");
+        try (ChunkWriter writer = createChunkWriter(800)) {
+            List<String> parts = writer.split(text);
+            assertThat(parts).hasSizeGreaterThan(1);
+            assertThat(parts.getFirst()).contains("This is a paragraph");
+        }
     }
 
     @Test
@@ -57,50 +68,55 @@ class ChunkWriterTest extends UnitTest {
         String line = "This is a line with many words and information for testing the line splitting logic. ";
         String text = line.repeat(10) + "\n" + line.repeat(10) + "\n" + line.repeat(10);
         assertThat(text.length()).as("Text should be over 800 chars").isGreaterThan(800);
-        ChunkWriter writer = createChunkWriter(800, 10, false);
-        var parts = writer.split(text);
-        assertThat(parts).hasSizeGreaterThan(1);
+        try (ChunkWriter writer = createChunkWriter(800)) {
+            List<String> parts = writer.split(text);
+            assertThat(parts).hasSizeGreaterThan(1);
+        }
     }
 
     @Test
     @Order(4)
     void split_longTextWithoutSpaces_splitsOnWordBoundary() throws IOException {
         String text = "Hello world this is a long text without many spaces so we can test the word boundary splitting logic";
-        ChunkWriter writer = createChunkWriter(600, 10, false);
-        var parts = writer.split(text);
-        assertThat(parts).hasSize(1);
+        try (ChunkWriter writer = createChunkWriter(600)) {
+            List<String> parts = writer.split(text);
+            assertThat(parts).hasSize(1);
+        }
     }
 
     @Test
     @Order(5)
-    void split_shortTextWithNoDocumented_skipped() throws IOException {
-        ChunkWriter writer = createChunkWriter(600, 10, true);
-        String text = "This is a short text that fits within the limit";
-        ObjectNode metadata = jsonMapper.createObjectNode();
-        writer.write("id-1", text, metadata, false);
-        assertThat(writer.count()).isZero();
+    void documentedOnly_shortText_skipped() throws IOException {
+        try (ChunkWriter writer = createDocumentedOnlyChunkWriter(600)) {
+            String text = "This is a short text that fits within the limit";
+            ObjectNode metadata = jsonMapper.createObjectNode();
+            writer.write("id-1", text, metadata, false);
+            assertThat(writer.count()).isZero();
+        }
     }
 
     @Test
     @Order(6)
-    void split_shortTextWithDocumented_written() throws IOException {
-        ChunkWriter writer = createChunkWriter(600, 10, true);
-        String text = "This is a short text that fits within the limit";
-        ObjectNode metadata = jsonMapper.createObjectNode();
-        writer.write("id-1", text, metadata, true);
-        assertThat(writer.count()).isEqualTo(1);
+    void documentedOnly_shortText_written() throws IOException {
+        try (ChunkWriter writer = createDocumentedOnlyChunkWriter(600)) {
+            String text = "This is a short text that fits within the limit";
+            ObjectNode metadata = jsonMapper.createObjectNode();
+            writer.write("id-1", text, metadata, true);
+            assertThat(writer.count()).isEqualTo(1);
+        }
     }
 
     @Test
     @Order(7)
-    void split_longTextWithDocumented_splitsAndCounts() throws IOException {
+    void documentedOnly_longText_splitsAndCounts() throws IOException {
         String paragraph = "This is a paragraph with many words and information for testing the text splitting logic. ";
         String text = paragraph.repeat(10) + "\n\n" + paragraph.repeat(10);
         assertThat(text.length()).as("Text should be over 800 chars").isGreaterThan(800);
-        ChunkWriter writer = createChunkWriter(800, 10, true);
-        ObjectNode metadata = jsonMapper.createObjectNode();
-        writer.write("id-1", text, metadata, true);
-        assertThat(writer.count()).isGreaterThan(1);
+        try (ChunkWriter writer = createDocumentedOnlyChunkWriter(800)) {
+            ObjectNode metadata = jsonMapper.createObjectNode();
+            writer.write("id-1", text, metadata, true);
+            assertThat(writer.count()).isGreaterThan(1);
+        }
     }
 
     @Test
@@ -109,9 +125,10 @@ class ChunkWriterTest extends UnitTest {
         String paragraph = "This is a paragraph with many words and information for testing the text splitting logic. ";
         String text = paragraph.repeat(10) + "\n\n" + paragraph.repeat(10);
         assertThat(text.length()).as("Text should be over 800 chars").isGreaterThan(800);
-        ChunkWriter writer = createChunkWriter(800, 10, false);
-        int breakPos = writer.bestBreak(text, 0, 800);
-        assertThat(breakPos).isGreaterThan(0);
+        try (ChunkWriter writer = createChunkWriter(800)) {
+            int breakPos = writer.bestBreak(text, 0, 800);
+            assertThat(breakPos).isGreaterThan(0);
+        }
     }
 
     @Test
@@ -120,18 +137,20 @@ class ChunkWriterTest extends UnitTest {
         String line = "This is a line with many words and information for testing the line splitting logic. ";
         String text = line.repeat(10) + "\n" + line.repeat(10) + "\n" + line.repeat(10);
         assertThat(text.length()).as("Text should be over 800 chars").isGreaterThan(800);
-        ChunkWriter writer = createChunkWriter(800, 10, false);
-        int breakPos = writer.bestBreak(text, 0, 800);
-        assertThat(breakPos).isGreaterThan(0);
+        try (ChunkWriter writer = createChunkWriter(800)) {
+            int breakPos = writer.bestBreak(text, 0, 800);
+            assertThat(breakPos).isGreaterThan(0);
+        }
     }
 
     @Test
     @Order(10)
     void bestBreak_noGoodBreak_returnsHardEnd() throws IOException {
         String text = "Hello world this is a long text without many spaces so we can test the word boundary splitting logic";
-        ChunkWriter writer = createChunkWriter(600, 10, false);
-        int breakPos = writer.bestBreak(text, 0, 600);
-        assertThat(breakPos).isGreaterThan(0);
-        assertThat(breakPos).isLessThanOrEqualTo(600);
+        try (ChunkWriter writer = createChunkWriter(600)) {
+            int breakPos = writer.bestBreak(text, 0, 600);
+            assertThat(breakPos).isGreaterThan(0);
+            assertThat(breakPos).isLessThanOrEqualTo(600);
+        }
     }
 }
